--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,24 @@
 language: python
+
 python:
   - "3.7"
+
+services:
+  - docker
+
+before_install:
+  - docker build -t co:latest .
+  - docker run -p 5000:5000 co:latest
+
+deploy:
+  provider: script
+  script: bash docker_push
+  on:
+    branch: master
+
 # command to install dependencies
-install:
-  - pip install -r requirements.txt
+#install:
+#  - pip install -r requirements.txt
 # command to run tests
-script:
-  - nose2
+#script:
+#  - nose2
