--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ services:
 
 before_install:
   - docker build -t co:latest .
-  - docker run -p 5000:5000 co:latest
+  - docker run -d -p 5000:5000 co:latest
+  - docker ps -a
 
 deploy:
   provider: script
